--- a/project.config.json
+++ b/project.config.json
@@ -45,7 +45,7 @@
 					"id": 3,
 					"name": "inform",
 					"pathName": "pages/inform/inform",
-					"query": "scene=packet_126"
+					"query": "scene=packet_167"
 				},
 				{
 					"id": 4,
@@ -75,6 +75,12 @@
 					"id": -1,
 					"name": "demo",
 					"pathName": "pages/demo/demo",
+					"query": "scene=packet_126"
+				},
+				{
+					"id": 9,
+					"name": "commonred",
+					"pathName": "pages/commonred/commonred",
 					"query": "scene=packet_126"
 				}
 			]
