--- a/project.config.json
+++ b/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -82,6 +82,12 @@
 					"name": "commonred",
 					"pathName": "pages/commonred/commonred",
 					"query": "scene=packet_126"
+				},
+				{
+					"id": 10,
+					"name": "index",
+					"pathName": "pages/index/index",
+					"query": "scene=dd_248"
 				}
 			]
 		}
